<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WedApp</string>
    <string name="title_activity_new_product">Create New Gift</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">WedApp</string>
    <string name="title_activity_dashboard">WedApp</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_product_detail">Product Detail</string>
    <string name="title_activity_reservation">Reserving Gift</string>
    <string name="title_activity_register">Registration</string>
    <string name="title_activity_new_list">New List</string>
    <string name="title_activity_update_profile">Update Profile</string>
    <string name="title_activity_update_product">Update Product</string>
    <string name="title_activity_update_list_detail">Update List</string>
    <string name="add_list">Add List</string>
    <string name="see_list">See List</string>
    <string name="list_code">List Code</string>
    <string name="update_list">Update List</string>
    <string name="delete_list">Delete List</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">I don\'t have an account. Register me!</string>
    <string name="merchant">I\'m a Merchant</string>
    <string name="groomn">Groom Name</string>
    <string name="grooms">Groom Surname</string>
    <string name="briden">Bride Name</string>
    <string name="brides">Bride Surname</string>
    <string name="home_merchant">Merchant\'s Home</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="price">Price</string>
    <string name="photo">Take a Photo</string>
    <string name="up_photo">Change Photo</string>
    <string name="create_product">Create Product</string>
    <string name="update_product">Update Product</string>
    <string name="merchant_name">Merchant</string>
    <string name="phone">Phone</string>
    <string name="drive">Drive Me</string>
    <string name="reserve">Reserve</string>
    <string name="vat">VAT</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="build_number">Build Number</string>
    <string name="register_me">Register</string>
    <string name="already_reg">Already registered. Login me!</string>
    <string name="cancel">Cancel</string>
    <string name="wedding_date">Wedding Date</string>
    <string name="update">Update</string>
    <string name="title_activity_list">Gift List</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">Gift Details</string>
    <string name="title_activity_my_list_fragment">Gift List</string>
    <string name="title_activity_my_detail_fragment">Gift Details</string>
    <string name="title_activity_mer_list">Gift List</string>
    <string name="title_activity_mer_list_fragment">Gift List</string>
    <string name="title_activity_mer_detail_fragment">Gift Details</string>
    <string name="title_activity_mer_detail">Gift Details</string>
    <string name="title_activity_facebook">Share on Facebook</string>
    <string name="app_id">1382212392001160</string>
    <string name="publish">Publish</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    
    <string name="noInternet">Application need data connection!</string>
    <string name="welcomeDashboard">Hi</string>
    <string name="noListCodeDashboard">Please, insert a list code</string>
    <string name="Loading">Loading</string>
    <string name="PleaseWait">Please wait...</string>
    <string name="listDelDashboard">List cancelled!</string>
    <string name="delErrorDashboard">Error occurred during deletion</string>
    <string name="messageFacebook">I have looked at the wedding list of</string>
    <string name="and">and</string>
    <string name="descriptionFacebook">Buy a gift with WedApp!</string>
    <string name="postedFacebook">Posted story, id:</string>
    <string name="cancelFacebook">Publish cancelled</string>
    <string name="errorPostingFacebook">Error posting story</string>
    <string name="selectApp">Select app to share</string>
    <string name="noTwitter">Please, install Twitter to use this function!</string>
    <string name="errorLogin">Incorrect username/password!</string>
    <string name="noGiftMerListFragment">There are not your products in this list</string>
    <string name="noListMerListFragment">This list does not exist</string>
    <string name="noMaps">Please, install Google Maps to use this function!</string>
    <string name="successCreationNewList">List was successfully created! List code is</string>
    <string name="errorCreationNewList">Error occurred creating new list</string>
    <string name="noImage">Please, take a picture</string>
    <string name="unknownPath">Unknown path</string>
    <string name="internalError">An error occurred</string>
    <string name="errorRegistration">Error occurred in registration</string>
    <string name="emptyField">Please, fill all fields!</string>
    <string name="giftReservation">Gift reservation with WedApp</string>
    <string name="paymentCompleted">Payment completed</string>
    <string name="paymentCancelled">Payment cancelled</string>
    <string name="successUpdateList">List correctly updated!</string>
    <string name="errorUpdateList">Error occurred updating list</string>
    <string name="successUpdateProfile">Profile correctly updated!</string>
    <string name="errorUpdateProfile">Error occurred updating profile</string>
    <string name="insertListCode">Please, insert a list code</string>
    <string name="noListFound">There are not lists associated to this code</string>
    <string name="noProductFound">The list has not available gifts</string>
    <string name="confirm">Confirmation</string>
    <string name="confirmD">Are you sure to delete this list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="addList">Add list</string>
    <string name="shareOnFacebook">Share on Facebook</string>
    <string name="shareOnTwitter">Share on Twitter</string>
    <string name="upList">Update list</string>
    <string name="addGift">Add gift</string>
    <string name="suc_update">Gift Updated</string>
    <string name="fai_update">Error Updating Gift</string>
    <string name="suc_delete">Gift Deleted</string>
    <string name="fail_delete">Error Deleting Gift</string>
    
</resources>
