<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dip" >
        
        <!-- Email Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
	    	android:textColor="#fc6c85" />
        <!--  Email TextField -->
        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
        
		<!-- Password TextField -->
		<TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
	    	android:textColor="#fc6c85" />
		<!-- Password TextField -->
        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        
		<!-- VAT Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/vat"
	    	android:textColor="#fc6c85" />
        <!-- VAT TextField -->
        <EditText
            android:id="@+id/registerVAT"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
        
        <!-- Name Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
	    	android:textColor="#fc6c85" />
        <!-- Name TextField -->
        <EditText
            android:id="@+id/registerName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
        <!-- City Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
	    	android:textColor="#fc6c85" />
        <!-- City TextField -->
        <EditText
            android:id="@+id/registerCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
        <!-- Address Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
	    	android:textColor="#fc6c85" />
        <!-- Address TextField -->
        <EditText
            android:id="@+id/registerAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
        <!-- Build Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_number"
	    	android:textColor="#fc6c85" />
        <!-- Build TextField -->
        <EditText
            android:id="@+id/registerBuild"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
        
        <!-- Phone Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
	    	android:textColor="#fc6c85" />
        <!-- Phone TextField -->
        <EditText
            android:id="@+id/registerPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
        
        <!--  Error message -->
        <TextView android:id="@+id/register_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#e52b50"
            android:padding="10dip"
            android:textStyle="bold"/>

		<!-- Register Button -->        
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/register_me"
	    	android:background="#fc6c85"
	    	android:textColor="#ffffff" />

        <!--  Link to Login Screen -->
    </LinearLayout>

</ScrollView>