<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dip" >
        
        <!-- Email -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
	    	android:textColor="#fc6c85" />
        
        <EditText
            android:id="@+id/updateEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
		<!-- New password -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
	    	android:textColor="#fc6c85" />

        <EditText
            android:id="@+id/updatePassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" /> 
        <!-- City -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
	    	android:textColor="#fc6c85" />

        <EditText
            android:id="@+id/updateCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />        
        <!-- Address -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
	    	android:textColor="#fc6c85" />

        <EditText
            android:id="@+id/updateAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
        <!-- Build -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_number"
	    	android:textColor="#fc6c85" />

        <EditText
            android:id="@+id/updateBuild"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />        
        <!-- Phone -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
	    	android:textColor="#fc6c85" />

        <EditText
            android:id="@+id/updatePhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
        
        <!--  Error message -->
        <TextView android:id="@+id/update_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#e52b50"
            android:padding="10dip"
            android:textStyle="bold"/>

		<!-- Update Button -->        
        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/update"
	    	android:background="#fc6c85"
	    	android:textColor="#ffffff" />

        <!--  Link to Login Screen -->
    </LinearLayout>

</ScrollView>