<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    <!-- Name Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17dip"
        android:textColor="#fc6c85"/>/>
 
    <!-- Input Name -->
    <EditText android:id="@+id/inputName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:singleLine="true"/>
 
    <!-- Price Label -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:text="@string/price"
        android:textSize="17dip"
        android:textColor="#fc6c85"/> />
 
    <!-- Input Price -->

    <EditText
        android:id="@+id/inputPrice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />
 
    <!-- Button Create Product -->

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

       
        <Button
        	android:id="@+id/imguploadbtn"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="0.5"
        	android:layout_margin="5dip"
        	android:background="@drawable/button_color"
    		android:textColor="#ffffff"
        	android:text="@string/up_photo" />
        
        <Button
            android:id="@+id/btnCreateProduct"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="5dip"
            android:background="@drawable/button_color"
    		android:textColor="#ffffff"
            android:text="@string/update_product" />

    </LinearLayout>
 
</LinearLayout>
</ScrollView>